syntax = "proto3";

package pbft;

option go_package = "./proto";

// Dịch vụ giao tiếp duy nhất (Giống Raft)
service ConsensusService {
    rpc HandleMessage (PBFTMessage) returns (PBFTResponse);
}

message PBFTMessage {
    string type = 1;          // "PrePrepare", "Prepare", "Commit"
    string node_id = 2;       // ID người gửi (Node ID)
    int64 view = 3;           // View hiện tại (Thay cho ViewID)
    int64 sequence_number = 4; // Sequence (Thay cho SequenceID)
    string block_hash = 5;    // Hash của block hiện tại
    string prev_block_hash = 6; // [QUAN TRỌNG] Để nối chuỗi Blockchain
    string data = 7;          // Dữ liệu (chỉ có trong PrePrepare)
    int64 timestamp = 8;      // Thời gian tạo
}

message PBFTResponse {
    bool success = 1;
    string message = 2;
}